# faktaiklim-nlp

./: .env  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  cog.toml  deployment  docker-compose-qdrant.yml  docker-compose.yml  pyproject.toml
app/: config.py  log.py  main.py  schema.py
app/core/: climate.py  document_db.py  search.py  utils.py
be_insertion_scripts/: convert_mongabay_date.py  label_fix.py  load_data.py  subtopic_multilabel_v2.py  utils.py
qdrant_scripts/: config.py  delete_collection.py  document_db.py  fill_qdrant_index.py  fill_qdrant_index2.py  insert_using_giz_endpoint.py  schema.py  test.json  test_search.py  test_vector_api.py  utils.py
qdrant_scripts/samples/: hoax.json
samples/input/: topic_input.json
samples/output/: check_output.json  topic_output.json
tasks/: migrate_qdrant.py
tests/rest/: test_check_api.py  test_insert_endpoint.py
