[project]
name = "giz-climate-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "exceptiongroup==1.2.2",
    "fastapi[standard]==0.115.0",
    "h11==0.14.0",
    "idna==3.10",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.5.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "qdrant-client>=1.11.3",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "starlette==0.38.6",
    "tqdm>=4.67.0",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "uvicorn==0.30.6",
]
